// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders on easy difficulty correctly 1`] = `
<View
  style={
    Object {
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 10,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#343D58",
            "fontWeight": "bold",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 35,
          },
        ]
      }
    >
      Question title
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D6D8DE",
          "borderRadius": 20,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginRight": 10,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#343D58",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#B0B0B0",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#B0B0B0",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#343D58",
            "textTransform": "capitalize",
          }
        }
      >
        easy
      </Text>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#171717",
        "fontSize": 28,
      }
    }
  >
    Is this a test question?
  </Text>
</View>
`;

exports[`renders on hard difficulty correctly 1`] = `
<View
  style={
    Object {
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 10,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#343D58",
            "fontWeight": "bold",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 35,
          },
        ]
      }
    >
      Question title
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D6D8DE",
          "borderRadius": 20,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginRight": 10,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#343D58",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#343D58",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#343D58",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#343D58",
            "textTransform": "capitalize",
          }
        }
      >
        hard
      </Text>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#171717",
        "fontSize": 28,
      }
    }
  >
    Is this a test question?
  </Text>
</View>
`;

exports[`renders on medium difficulty correctly 1`] = `
<View
  style={
    Object {
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 10,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#343D58",
            "fontWeight": "bold",
          },
          Object {
            "flex": 1,
          },
          Object {
            "fontSize": 35,
          },
        ]
      }
    >
      Question title
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D6D8DE",
          "borderRadius": 20,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginRight": 10,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#343D58",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#343D58",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#B0B0B0",
                "fontSize": 12,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#343D58",
            "textTransform": "capitalize",
          }
        }
      >
        medium
      </Text>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#171717",
        "fontSize": 28,
      }
    }
  >
    Is this a test question?
  </Text>
</View>
`;
